--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                     <div class="peca">
                         <label for="" class="peca-titulo">Braços</label>
                         <div class="controle">
-                            <buttom class="controle-ajuste">-</buttom>
-                            <input type="text" class="controle-contador" value="00">
-                            <buttom class="controle-ajuste">+</buttom>
+                            <buttom class="controle-ajuste" id="sub">-</buttom>
+                            <input type="text" class="controle-contador" value="00" id="count-arm">
+                            <buttom class="controle-ajuste" id="sum">+</buttom>
                         </div>
                     </div>
                     <hr class="linha">
